# FAST10-Corner-Detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: .swp
data/box/: README
fast-er-1.0/fast_trees/: fast10.cc  fast10.ftree  fast10.m  fast11.cc  fast11.ftree  fast11.m  fast12.cc  fast12.ftree  fast12.m  fast7.cc  fast7.ftree  fast7.m  fast8.cc  fast8.ftree  fast8.m  fast9.cc  fast9.ftree  fast9.m
fast-er-1.0/html/: annotated.html  classtree__element-members.html  classtree__element.html  cvd__fast_8cc-source.html  cvd__fast_8h-source.html  detectors_8cc-source.html  detectors_8h-source.html  documentation_8h-source.html  dog_8cc-source.html  dog_8h-source.html  extract__features_8cc-source.html  extract__features_8cc.html  fast__N__features_8cc-source.html  fast__N__features_8cc.html  faster__bytecode_8cc-source.html  faster__bytecode_8h-source.html  faster__detector_8cc-source.html  faster__detector_8h-source.html  faster__tree_8cc-source.html  faster__tree_8h-source.html  files.html  formula.repository  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group__gDataset.html  group__gDetect.html  group__gFastTree.html  group__gOptimize.html  group__gRepeatability.html  group__gTree.html  group__gUtility.html  (+60 more)
libcvd/: CMakeLists.txt
output/box/fast_corner_detect_9/: frame_0.txt  frame_1.txt  frame_10.txt  frame_11.txt  frame_12.txt  frame_13.txt  frame_2.txt  frame_3.txt  frame_4.txt  frame_5.txt  frame_6.txt  frame_7.txt  frame_8.txt  frame_9.txt
output/junk/fast_corner_detect_9/: frame_0.txt  (+7 more)
scripts/: histogram.py  image_corners.py  image_corners_scalar.py  image_transf.py  ops.py  perf_ops.py  perf_peeling.py  perf_pixels.py  plot.py  roofline.py
src/: cvd_fast9.cpp  fast.h  fast10_avx2.cpp  fast10_avx2_16x2.cpp  fast10_avx2_blocking.cpp  fast10_avx2_blocking.inl  fast10_avx2_checkposition.cpp  fast10_avx2_gather16x2.cpp  fast10_avx2_gather4x8.cpp  fast10_avx2_gather8x4.cpp  fast10_avx2_unrolled_2.cpp  fast10_avx2_unrolled_3.cpp  fast10_avx2_vecpeeling.cpp  fast10_avx2_vecpeeling_mask.cpp  fast10_avx512.cpp  fast10_avx512_16x4.cpp  fast10_avx512_32x2.cpp  fast10_avx512_8x8.cpp  fast10_avx512_set.cpp  fast10_scalar.cpp  fast10_scalar_block.cpp  fast10_sse2.cpp  fast9_if.cpp  fast9_scalar.cpp  fast9_sse2.cpp  fastX_slow.cpp  fast_libcvd_wrapper.cpp  main.cpp  reorder_fast10_s.cpp  test_vtune.cpp  utils.cpp  utils.h
uica/: analyze.py  avx2.asm  avx2_4x8.asm  avx512.asm  scalar.asm  sed.sh  sse2.asm
uica/avx2/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
uica/avx2_4x8/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
uica/avx512/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  avx2.asm  avx2_512.txt  avx512.asm  avx512_512.txt
uica/scalar/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
uica/sse2/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
(+52 files in other folders)
